--- a/css/StylePc1080pNight.css
+++ b/css/StylePc1080pNight.css
@@ -48,11 +48,21 @@ background-attachment: fixed}
 max-height: max-content;
 text-align: center;
 justify-content: normal}
-@media only screen and (max-width: 850px){.body-others{justify-content: center}
+@media only screen and (max-width: 850px){.body-others{justify-content: normal}
+}
+.body-content{height: auto;
+max-height: max-content;
+text-align: center;
+justify-content: normal}
+@media only screen and (max-width: 850px){.body-content{justify-content: center}
 }
 h1{max-width: max-content;
 padding: 0;
 font-weight: 600}
+.h2-about{display: grid
+}
+@media only screen and (max-width: 850px){.h2-about{justify-content: center}
+}
 h3{font-size: 1.25em}
 table{width: 100%;
 border-collapse: collapse}
@@ -119,7 +129,7 @@ text-align: left;
 align-items: normal;
 justify-content: normal;
 display: grid}
-@media only screen and (max-width: 850px){.header-NormalHeader{padding-left: 0;
+@media only screen and (max-width: 850px){.header-NormalHeader{padding-left: 4vh;
 padding-bottom: 2rem;
 text-align: left;
 align-items: normal;
@@ -139,7 +149,7 @@ text-align: left;
 align-items: normal;
 justify-content: normal;
 display: grid}
-@media only screen and (max-width: 850px){.header-Content{padding-left: 0;
+@media only screen and (max-width: 850px){.header-Content{padding-left: 4vh;
 padding-bottom: 2rem;
 text-align: left;
 align-items: normal;
@@ -174,21 +184,25 @@ justify-content: center}
 padding-left: 4vh;
 text-align: justify;
 word-wrap: break-word}
-@media only screen and (max-width: 850px){.div-root-project-Content{padding-left: 0;
+@media only screen and (max-width: 850px){.div-root-project-Content{padding-left: 4vh;
 font-size: 1.1rem}
 }
 #div-root-project-Content-title{padding-bottom: 1.5rem}
-@media only screen and (max-width: 850px){#div-root-project-Content-title{padding-bottom: 1.1rem}
+@media only screen and (max-width: 850px){#div-root-project-Content-title{padding-left:7.225em;
+padding-bottom: 1.1rem;
+text-indent:-7.225em}
 }
 .div-root-blog-Content{max-width: 80vw;
 padding-left: 4vh;
 text-align: justify;
 word-wrap: break-word}
-@media only screen and (max-width: 850px){.div-root-blog-Content{padding-left: 0;
+@media only screen and (max-width: 850px){.div-root-blog-Content{padding-left: 4vh;
 font-size: 1.1rem}
 }
 #div-root-blog-Content-title{padding-bottom: 1.5rem}
-@media only screen and (max-width: 850px){#div-root-blog-Content-title{padding-bottom: 1.1rem}
+@media only screen and (max-width: 850px){#div-root-blog-Content-title{padding-left:7.225em;
+padding-bottom: 1.1rem;
+text-indent:-7.225em}
 }
 .div-root-research-Content{max-width: 80vw;
 padding-left: 4vh;
@@ -197,12 +211,14 @@ line-height: 2.85rem;
 */
 text-align: left;
 word-wrap: break-word}
-@media only screen and (max-width: 850px){.div-root-research-Content{padding-left: 0;
+@media only screen and (max-width: 850px){.div-root-research-Content{padding-left: 4vh;
 font-size: 1.1rem;
 line-height: 1.8rem}
 }
 #div-root-research-Content-title{padding-bottom: 1.5rem}
-@media only screen and (max-width: 850px){#div-root-research-Content-title{padding-bottom: 1.1rem}
+@media only screen and (max-width: 850px){#div-root-research-Content-title{padding-left:7.225em;
+padding-bottom: 1.1rem;
+text-indent:-7.225em}
 }
 .div-root-about-EducationExperience{/*margin-left: 10%;
 */
@@ -210,6 +226,9 @@ font-size: 1.5rem;
 text-align: left;
 align-items: left;
 justify-content: left}
+@media only screen and (max-width: 850px){.div-root-about-EducationExperience{font-size: 1.5rem;
+text-align: left}
+}
 .div-root-about-EducationExperience-Details{margin-top: 1.5rem;
 margin-bottom: 1.5rem;
 line-height: 2rem}
@@ -217,7 +236,8 @@ line-height: 2rem}
 text-align: center;
 word-wrap: break-word}
 @media only screen and (max-width: 850px){.div-root-content-Content{width: 80vw;
-padding-left: 0;
+/*padding-left: 0;*/
+margin: 0 auto;
 font-size: 1.2rem}
 }
 .div-root-content-Content-table{padding-left: 8vh;
@@ -328,4 +348,4 @@ a:focus{transition: color .5s ease-in-out;
 color: #84bb73}
 a:hover{color: #84bb73}
 a:active{color: #84bb73}
-body{display: flex !important}
+body{display: block !important}
