--- a/css/StylePc1080pNight.css
+++ b/css/StylePc1080pNight.css
@@ -59,7 +59,9 @@ justify-content: normal}
 h1{max-width: max-content;
 padding: 0;
 font-weight: 600}
-.h2-about{display: grid
+.h2-about{width: auto;
+padding-bottom: 5%;
+display: grid
 }
 @media only screen and (max-width: 850px){.h2-about{justify-content: center}
 }
@@ -158,7 +160,7 @@ display: grid}
 }
 .header-Contact{padding-top: 10%}
 .header-PersonalDetails{margin-top: 15%;
-margin-bottom: 10%;
+margin-bottom: 5%;
 font-size: 1.5rem;
 font-weight: 600;
 line-height: 2.85rem;
@@ -225,13 +227,19 @@ text-indent:-7.225em}
 font-size: 1.5rem;
 text-align: left;
 align-items: left;
+display: flex;
+flex-direction: column;
 justify-content: left}
 @media only screen and (max-width: 850px){.div-root-about-EducationExperience{font-size: 1.5rem;
-text-align: left}
+text-align: left;
+align-items: center;
+justify-content: center}
 }
 .div-root-about-EducationExperience-Details{margin-top: 1.5rem;
-margin-bottom: 1.5rem;
 line-height: 2rem}
+@media only screen and (max-width: 850px){.div-root-about-EducationExperience-Details{max-width: max-content;
+justify-content: left}
+}
 .div-root-content-Content{width: 100vw;
 text-align: center;
 word-wrap: break-word}
