--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,6 +1,6 @@
-@font-face{font-family: "iconfont";
+@font-face{font-family: "MainIcon";
 font-style: normal;
-src: url(../resources/fonts/iconfont.woff) format("woff")}
+src: url(../resources/fonts/MainIcon.woff) format("woff")}
 @font-face{font-family: "Bad Script";
 font-style: normal;
 font-weight: 300;
