--- a/css/StylePc1080pDayIndex.css
+++ b/css/StylePc1080pDayIndex.css
@@ -35,8 +35,8 @@ justify-content: center;
 background-image: linear-gradient(275deg, #f8f8f8 0%, #c2d5e2 100%);
 background-size: cover;
 background-attachment: fixed;
-animation: fadein 1s}
-@keyframes fadein{
+animation: fadeInAnimationAnimation 1s}
+@keyframes fadeInAnimation{
 0%{
 opacity: 0
 }
