--- a/css/StylePc1080pNightIndex.css
+++ b/css/StylePc1080pNightIndex.css
@@ -34,7 +34,16 @@ justify-content: center;
 */
 background-image: linear-gradient(275deg, #2b3241 0%, #1e232e 100%);
 background-size: cover;
-background-attachment: fixed}
+background-attachment: fixed;
+animation: fadeInAnimation 1s}
+@keyframes fadeInAnimation{
+0%{
+opacity: 0
+}
+100%{
+opacity: 1
+}
+}
 h1{max-width: max-content;
 padding: 0;
 font-weight: 600}
