--- a/css/StylePc1080pDayIndex.css
+++ b/css/StylePc1080pDayIndex.css
@@ -36,13 +36,8 @@ background-image: linear-gradient(275deg, #f8f8f8 0%, #c2d5e2 100%);
 background-size: cover;
 background-attachment: fixed;
 animation: fadeInAnimationAnimation 1s}
-@keyframes fadeInAnimation{
-0%{
-opacity: 0
-}
-100%{
-opacity: 1
-}
+@keyframes fadeInAnimation{0%{opacity: 0}
+100%{opacity: 1}
 }
 h1{max-width: max-content;
 padding: 0;
