--- a/css/StylePc1080pDaySafari.css
+++ b/css/StylePc1080pDaySafari.css
@@ -61,8 +61,7 @@ padding: 0;
 font-weight: 600}
 .h2-about{width: auto;
 padding-bottom: 5%;
-display: grid
-}
+display: grid}
 @media only screen and (max-width: 850px){.h2-about{justify-content: center}
 }
 h3{font-size: 1.25em}
@@ -222,16 +221,14 @@ line-height: 1.8rem}
 padding-bottom: 1.1rem;
 text-indent:-7.225em}
 }
-.div-root-about-EducationExperience{/*margin-left: 10%;
-*/
-font-size: 1.5rem;
+.div-root-about-EducationExperience{font-size: 1.5rem;
 text-align: left;
 align-items: left;
 display: flex;
 flex-direction: column;
 justify-content: left}
 @media only screen and (max-width: 850px){.div-root-about-EducationExperience{font-size: 1.5rem;
-text-align: left;
+text-align: center;
 align-items: center;
 justify-content: center}
 }
@@ -244,7 +241,8 @@ justify-content: left}
 text-align: center;
 word-wrap: break-word}
 @media only screen and (max-width: 850px){.div-root-content-Content{width: 80vw;
-/*padding-left: 0;*/
+/*padding-left: 0;
+*/
 margin: 0 auto;
 font-size: 1.2rem}
 }
